--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -17,3 +17,58 @@
         margin-top: 40px;
     }
 }
+
+h1 {
+    color: #64c3db;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+
+@media (max-width: 428px) {
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f9;
+        color: #333;
+        margin: 0;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        text-align: center;
+    }
+}
+
+#avatar {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+    box-shadow: 0 24px 38px rgb(12, 112, 162);
+}
+
+.container {
+    max-width: 600px;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    color: #2c3e50;
+}
+
+p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.highlight {
+    color: #e74c3c;
+    font-weight: bold;
+}
